c/src/test/resources/c/nec_inline_bnc/invalid/ex46-3.ctrl
<controlFile>
  <sourceFile name="../ex46.c" id="1" />
  <run>
    <startPosition fileId="1" line="12" />
    <wayPoint fileId="1" line="23" >
      <loop iterTimes="2" />
    </wayPoint>
    <endPosition fileId="1" line="32" />
  </run>
</controlFile>